# portia-digest-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: daily-digest.yml
portia_fetch/: __init__.py  analyzer.py  cli.py  client.py  email_formatter.py  email_sender.py  mail_preview.py  summarizer.py
